[package]
name = "teerender"
version = "0.1.0-alpha.0"
edition = "2021"
authors = ["Edgar <git@edgarluque.com>"]
description = "A blazingly fast tee skin renderer web service, with custom colors."
readme = "README.md"
documentation = "https://docs.rs/teerender"
repository = "https://github.com/edg-l/teerender"
license = "MIT"
keywords = ["ddnet", "teeworlds", "tee", "skin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
axum = { version = "0.6.19", features = ["multipart", "tracing"] }
image = { version = "0.24.6", features = ["png"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
